--- a/TrainTimesTodayMainApp/Base.lproj/Main.storyboard
+++ b/TrainTimesTodayMainApp/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11521.1" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11517.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,52 +19,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="URY-Zp-aIo" customClass="ABCustomButton1" customModule="TrainTimesToday">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="URY-Zp-aIo" customClass="StationButton" customModule="TrainTimesToday" customModuleProvider="target">
+                                <color key="backgroundColor" red="0.17803969559999999" green="1" blue="0.072035416180000006" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="KA0-l8-Swk"/>
+                                    <constraint firstAttribute="height" constant="100" id="LII-oh-IT3"/>
+                                    <constraint firstAttribute="width" constant="150" id="V3U-ye-dB2"/>
                                 </constraints>
-                                <state key="normal" title="from"/>
+                                <state key="normal" title="from">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="50"/>
+                                        <real key="value" value="0.0"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="bezierShapeColor">
-                                        <color key="value" red="0.92829816542331978" green="1" blue="0.5053828714548716" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="value" red="1" green="0.62016118580000001" blue="0.61892985730000005" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="fromStationButtonTappedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="s49-PV-bN5"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Za0-rL-ge3" customClass="ABCustomButton1" customModule="TrainTimesToday">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="pGi-gt-X0L"/>
-                                </constraints>
-                                <state key="normal" title="to"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="10"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="toStationButtonTappedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vWY-38-l3l"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="URY-Zp-aIo" firstAttribute="width" secondItem="Za0-rL-ge3" secondAttribute="width" id="I8s-d2-jPt"/>
-                            <constraint firstItem="Za0-rL-ge3" firstAttribute="leading" secondItem="URY-Zp-aIo" secondAttribute="trailing" constant="15" id="OvH-v0-ZaT"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Za0-rL-ge3" secondAttribute="trailing" id="cHY-NI-Ute"/>
-                            <constraint firstItem="URY-Zp-aIo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="cg1-6N-eOc"/>
-                            <constraint firstItem="Za0-rL-ge3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="dL8-To-nWD"/>
-                            <constraint firstItem="URY-Zp-aIo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="lU8-bk-chT"/>
+                            <constraint firstItem="URY-Zp-aIo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="jSv-ta-maE"/>
+                            <constraint firstItem="URY-Zp-aIo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="25" id="wZE-DG-Jrk"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="fromStationButton" destination="URY-Zp-aIo" id="fIU-Tt-Whl"/>
-                        <outlet property="toStationButton" destination="Za0-rL-ge3" id="28r-0U-gHj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -82,47 +68,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="y8G-zf-MGD">
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y8G-zf-MGD">
+                                <frame key="frameInset" minX="36" width="303" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="ea6-pN-Ydl" id="m8S-MO-YiW"/>
                                 </connections>
                             </searchBar>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="3Bm-sK-uus">
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kHV-tW-svN">
-                                        <state key="normal" title="Cancel"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="57" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kZe-Cv-kN8">
+                                <frame key="frameInset" minY="50" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="0.68067175759999998" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="stationCell" id="nMT-jB-Fb3" customClass="StationCell" customModule="TrainTimesToday" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="57"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nMT-jB-Fb3" id="qem-4E-EDd">
+                                            <frame key="frameInset" width="375" height="57"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eTX-5Q-8Ju">
+                                                    <frame key="frameInset" minX="70" minY="12" width="235" height="33"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="33" id="GL8-ze-h9M"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="eTX-5Q-8Ju" firstAttribute="leading" secondItem="qem-4E-EDd" secondAttribute="leadingMargin" constant="62" id="DEx-bi-xnv"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="eTX-5Q-8Ju" secondAttribute="trailing" constant="62" id="Z41-0r-q45"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.0027077718282129126" blue="0.99183776619651154" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
-                                            <action selector="tappedCancelWithSender:" destination="ea6-pN-Ydl" eventType="touchUpInside" id="VgS-eS-Jkf"/>
+                                            <outlet property="leftConstraint" destination="DEx-bi-xnv" id="Nqp-oL-Mng"/>
+                                            <outlet property="stationName" destination="eTX-5Q-8Ju" id="bTM-Uj-csa"/>
                                         </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="LO1-Oh-zJ4"/>
-                                </constraints>
-                            </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kZe-Cv-kN8">
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="ea6-pN-Ydl" id="h59-E4-w9b"/>
                                     <outlet property="delegate" destination="ea6-pN-Ydl" id="0dd-MA-V9U"/>
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.80000001190000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
-                        <constraints>
-                            <constraint firstItem="kZe-Cv-kN8" firstAttribute="top" secondItem="y8G-zf-MGD" secondAttribute="bottom" id="302-n8-Vd6"/>
-                            <constraint firstItem="y8G-zf-MGD" firstAttribute="top" secondItem="B0c-lS-3t6" secondAttribute="topMargin" id="4pb-f5-JVi"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="y8G-zf-MGD" secondAttribute="trailing" id="4tO-JI-F6R"/>
-                            <constraint firstItem="3Bm-sK-uus" firstAttribute="top" secondItem="kZe-Cv-kN8" secondAttribute="bottom" id="8Qj-xv-Nex"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="3Bm-sK-uus" secondAttribute="trailing" id="Sgw-2W-CHU"/>
-                            <constraint firstItem="3Bm-sK-uus" firstAttribute="leading" secondItem="B0c-lS-3t6" secondAttribute="leadingMargin" id="VPw-gT-sqc"/>
-                            <constraint firstAttribute="rightMargin" secondItem="kZe-Cv-kN8" secondAttribute="right" id="cnw-7y-W3Y"/>
-                            <constraint firstItem="y8G-zf-MGD" firstAttribute="leading" secondItem="B0c-lS-3t6" secondAttribute="leadingMargin" id="rGu-vg-ebQ"/>
-                            <constraint firstItem="kZe-Cv-kN8" firstAttribute="leading" secondItem="B0c-lS-3t6" secondAttribute="leadingMargin" id="t29-Ib-laV"/>
-                            <constraint firstItem="gIn-xb-zeY" firstAttribute="top" secondItem="3Bm-sK-uus" secondAttribute="bottom" id="ymb-DB-hkt"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="searchField" destination="y8G-zf-MGD" id="7HK-LX-ZdU"/>
@@ -131,7 +126,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BsS-Yl-lMD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1148" y="121"/>
+            <point key="canvasLocation" x="1148" y="120.98950524737631"/>
         </scene>
     </scenes>
 </document>
